# face_rcg

./: .gitignore  CMakeLists.txt  README.md
input/: 001.pts  mean_sdev.txt  mean_shape.pts
input/images/: image_0001.pts  image_0002.pts  image_0003.pts  image_0004.pts  image_0005.pts  image_0006.pts  image_0007.pts  image_0008.pts  image_0009.pts  image_0010.pts  image_0011.pts  image_0012.pts  image_0013.pts  image_0014.pts  image_0015.pts  image_0016.pts  image_0017.pts  image_0018.pts  image_0019.pts  image_0020.pts  image_0025.pts  image_0026.pts  image_0027.pts  image_0028.pts  image_0029.pts  image_0030.pts  image_0032.pts  image_0033.pts  image_0034.pts  image_0035.pts  image_0036.pts  image_0037.pts  image_0038.pts  image_0039.pts  image_0040.pts  image_0041.pts  image_0042.pts  image_0043.pts  image_0044.pts  image_0045.pts  (+760 more)
input/testimages/: image_0001.pts  image_0002.pts  image_0003.pts  image_0004.pts  image_0005.pts  image_0006.pts  image_0007.pts  image_0008.pts  image_0009.pts  image_0011.pts  image_0012.pts  image_0013.pts  image_0014.pts  image_0015.pts  image_0018.pts  image_0021.pts  image_0022.pts  image_0023.pts  image_0024.pts  image_0025.pts  image_0026.pts  image_0027.pts  image_0028.pts  image_0029.pts  image_0030.pts  image_0031.pts  image_0033.pts  image_0034.pts  image_0035.pts  image_0036.pts  image_0037.pts  image_0038.pts  image_0039.pts  image_0040.pts  image_0041.pts  image_0042.pts  image_0043.pts  image_0044.pts  image_0045.pts  image_0046.pts  (+177 more)
output/model/: R0.mdl  Rtest0.mdl  Rtest1.mdl  p0.m  ptest0.m  ptest1.m  (+3 more)
src/: main.cpp
(+10 files in other folders)
